src/test/deca/context/valid/created/protectedField.deca
class A
{
  protected int x = 10;
}
class B extends A
{
  int get(C c)
  {
    return c.x;
  }
}

class C extends B{

}
class X{
  void m()
  {
    C c = new C();
    B b = new B();
    println( b.get(c));
  }
}

