src/test/deca/context/invalid/created/test_invalid_method.deca
class A {
    protected  int  var ;
    int getVar(){
        return var ;
    }
    void m() {
       
    }
    
}

class B {
   
    
    void test() {
         A a = new A();
      println(a.getVar()) ;
    }
}